Fix wrap in modal

--- a/src/components/modal/Modal.pcss
+++ b/src/components/modal/Modal.pcss
@@ -22,6 +22,7 @@
   }
   &.center {
     text-align: center;
+    white-space: nowrap;
     
     &::before {
       content: '';
